log
ju., 12 de may. de 2022 17:02:19: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 46 insertions(+)
 tests:  2|4
total_score: 15/70
949c4b2
ju., 12 de may. de 2022 17:03:39: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:71:5: error: too many arguments to function 'puts'
     puts("%d--------",k);
     ^~~~
In file included from test.c:1:0:
c:\mingw\include\stdio.h:677:41: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  int    puts (const char *);
                                         ^~~~
Compilation failed
b99ab12
ju., 12 de may. de 2022 17:04:01: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4d79056
ju., 12 de may. de 2022 17:10:51: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8711df5
ju., 12 de may. de 2022 17:12:15: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
11b8799
ju., 12 de may. de 2022 17:13:06: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
c4dad80
ju., 12 de may. de 2022 18:37:06: 
 sudoku.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:17: error: unused variable 'p' [-Werror=unused-variable]
   int i,j,sub,k,p,cont1=0,cont2=0;
                 ^
sudoku.c:48:11: error: unused variable 'sub' [-Werror=unused-variable]
   int i,j,sub,k,p,cont1=0,cont2=0;
           ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
51c935f
ju., 12 de may. de 2022 18:38:11: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:48:13: error: unused variable 'p' [-Werror=unused-variable]
   int i,j,k,p,cont1=0,cont2=0;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
d4fbfc9
ju., 12 de may. de 2022 18:39:37: 
 sudoku.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  2|4
total_score: 15/70
fac08e0
ju., 12 de may. de 2022 18:45:38: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2d49a63
ju., 12 de may. de 2022 18:50:13: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'print_node':
sudoku.c:39:8: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
        for(j=0;j<9;j++)
        ^~~
sudoku.c:41:11: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
           printf("%d ", n->sudo[i][j]);
           ^~~~~~
sudoku.c: In function 'is_valid':
sudoku.c:54:13: error: unused variable 'j' [-Werror=unused-variable]
         int j=3*(sub%3) + (p%3) ;
             ^
sudoku.c:53:13: error: unused variable 'i' [-Werror=unused-variable]
         int i=3*(sub/3) + (p/3) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
898c5c3
ju., 12 de may. de 2022 18:53:08: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'print_node':
sudoku.c:39:8: error: this 'for' clause does not guard... [-Werror=misleading-indentation]
        for(j=0;j<9;j++)
        ^~~
sudoku.c:41:11: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'for'
           printf("%d ", n->sudo[i][j]);
           ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6aabd78
ju., 12 de may. de 2022 18:54:11: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
698eff9
ju., 12 de may. de 2022 18:55:15: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
ea39e5d
ju., 12 de may. de 2022 18:56:29: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2e74e42
ju., 12 de may. de 2022 18:56:59: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9505afb
